# algolab_trial_1

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  basci.sh  ci.yml  hello.txt  pyproject.toml  tasks.py
.github/workflows/: blank.yml  ci.yml  main.yml
algolab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
algos/: __init__.py  base.py  ma_crossover.py
backtests/: runner.py
configs/: default.yaml
data/: __init__.py  loader.py
data/features/: features_sample.csv
data/staging/: prices_sample.csv
mypy_report/: index.txt
tests/: test_backtest_smoke.py  test_cli.py  test_config.py  test_logging.py  test_paths.py
utils/: config.py  logging.py  paths.py
