[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algolab"
version = "0.0.1"
description = "Algorithmic trading lab scaffold"
authors = [{name = "Sumit Bankar"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "pandas>=2.1",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.1",
    "ruff>=0.5.0",
    "mypy>=1.8",
    "pre-commit>=3.6"
]

[tool.ruff]
line-length = 100
src = ["."]

[tool.ruff.lint]
extend-select = ["I", "N", "UP", "RUF", "PL"]
ignore = ["E203", "E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["algos*", "backtests*"]   # what to ship
exclude = ["tests*", "data*", "reports*", "configs*", "notebooks*", "examples*"]
